--- a/estoreweb/DockerFile
+++ b/estoreweb/DockerFile
@@ -1,7 +1,8 @@
-FROM node:10
+FROM node:latest
+RUN mkdir /app
 WORKDIR /app
-COPY package.json /app
+COPY package.json /app/
 RUN npm install
-COPY . /app
+COPY . /app/
 CMD node server.js
 EXPOSE 9999
